2015-10-13  Hyo-Kyung Lee  <hyoklee@hdfgroup.org>

	* hdf_compass/compass_viewer/container/tree.py: added.
	
